--- a/css/menu.css
+++ b/css/menu.css
@@ -8,17 +8,18 @@
 /* ==========================================================================
    Helper classes
    ========================================================================== */
-.group:before,
-.group:after {
+.clearfix:before, nav #menu-rd li.has-sub-menu:before,
+.clearfix:after,
+nav #menu-rd li.has-sub-menu:after {
   content: "";
   display: table;
 }
 
-.group:after {
+.clearfix:after, nav #menu-rd li.has-sub-menu:after {
   clear: both;
 }
 
-.group {
+.clearfix, nav #menu-rd li.has-sub-menu {
   zoom: 1;
   /* For IE 6/7 (trigger hasLayout) */
 }
@@ -40,13 +41,13 @@ nav #menu-rd {
   font-size: 1.125em;
 }
 nav #menu-rd .sub-menu .sub-menu a {
-  padding-left: 50px;
+  padding-left: 40px;
 }
 nav #menu-rd .sub-menu .sub-menu .sub-menu a {
-  padding-left: 80px;
+  padding-left: 60px;
 }
 nav #menu-rd .sub-menu .sub-menu .sub-menu .sub-menu a {
-  padding-left: 110px;
+  padding-left: 80px;
 }
 nav #menu-rd ul {
   margin: 0;
@@ -57,12 +58,10 @@ nav #menu-rd ul ul {
   top: 0;
   left: 100%;
 }
-nav #menu-rd ul.open {
-  display: block;
-}
 nav #menu-rd li {
   line-height: 40px;
   background: #e2f2ad;
+  position: relative;
 }
 nav #menu-rd li a {
   color: #69505b;
@@ -73,14 +72,19 @@ nav #menu-rd li a {
 nav #menu-rd li a:hover, nav #menu-rd li a:focus {
   text-decoration: underline;
 }
+nav #menu-rd li.has-sub-menu {
+  width: auto;
+}
 nav #menu-rd li.has-sub-menu > a {
-  display: inline-block;
-  width: 80%;
+  display: block;
+  padding: 0 40px 0 20px;
 }
 nav #menu-rd li.has-sub-menu > .show-sub-menu {
-  display: inline-block;
-  width: 20%;
   height: 40px;
+  width: 40px;
+  position: absolute;
+  top: 0;
+  right: 0;
   cursor: pointer;
   text-align: center;
   color: #69505b;
@@ -115,26 +119,25 @@ html.touch .show-sub-menu {
     left: 0;
   }
   nav #menu-rd li {
-    position: relative;
     white-space: nowrap;
-  }
-  nav #menu-rd li.has-sub-menu > a {
-    width: auto;
-  }
-  nav #menu-rd li.has-sub-menu > .show-sub-menu {
-    text-align: left;
-    width: 40px;
+    /*
+    &.has-sub-menu{
+    	> a {
+    		width: auto;
+    	}
+    	> .show-sub-menu {
+    		width: $nav-height;
+    	}
+    }*/
   }
   nav #menu-rd > li {
     float: left;
-        	/*
-        	border-left: 1px solid $nav-color;
-	        &:first-child {
-	        	border: none;
-	        }
-	        */
+    border-left: 1px solid #69505b;
   }
-  nav #menu-rd > li > ul {
+  nav #menu-rd > li:first-child {
+    border: none;
+  }
+  nav #menu-rd > li ul {
     min-width: 100%;
   }
 
