--- a/sass/main.scss
+++ b/sass/main.scss
@@ -159,7 +159,7 @@ blockquote {
 }
 
 body {
-    background: #CBE86B;
+    background: #041122;
 }
 
 #page {
@@ -167,12 +167,13 @@ body {
     margin: 0 auto;
     padding: 0 24px;
     background: white;
+    color: #041122;
     header {
         padding: 24px 0;
     }
     footer {
     a {
-            color: #69505B;
+            color: #259073;
             font-weight: bold;
         }
     }
