--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,22 +1,23 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?30206293');
-  src: url('../font/fontello.eot?30206293#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?30206293') format('woff'),
-       url('../font/fontello.ttf?30206293') format('truetype'),
-       url('../font/fontello.svg?30206293#fontello') format('svg');
+  src: url('../font/fontello.eot?94751393');
+  src: url('../font/fontello.eot?94751393#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?94751393') format('woff'),
+       url('../font/fontello.ttf?94751393') format('truetype'),
+       url('../font/fontello.svg?94751393#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 /* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
 /* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
-
+/*
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?30206293#fontello') format('svg');
+    src: url('../font/fontello.svg?94751393#fontello') format('svg');
   }
 }
+*/
  
  [class^="icon-"]:before, [class*=" icon-"]:before {
   font-family: "fontello";
@@ -49,5 +50,4 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-angle-circled-up:before { content: '\e801'; } /* '' */
-.icon-angle-circled-down:before { content: '\e800'; } /* '' */
+.icon-plus:before { content: '\e800'; } /* '' */
