--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -1,35 +1,56 @@
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
+@import "global-settings";
 
-.clearfix:before,
-.clearfix:after {
-    content: "";
-    display: table;
-} 
-.clearfix:after {
-    clear: both;
-}
-.clearfix {
-    zoom: 1; /* For IE 6/7 (trigger hasLayout) */
-}
+/* ===================================================================================
+   Responsive Navigation (https://github.com/MichalRazorZalecki/responsive-navigation)
+   =================================================================================== */
 
-@import "compass";
+// MENU AWNING variables
 
-/* ==========================================================================
-   Responsive Navigation
-   ========================================================================== */
+$nav-awning-selector: ".menu-awning";
+$nav-awning-button-selector: ".menu-awning-button";
+$nav-awning-title-selector: ".menu-awning-title";
 
-/*
- * Sub Menu Indent
- */
+$nav-awning-title-font-size: 18px;
+$nav-awning-button-font-size: 24px;
+$nav-awning-height: 50px; // == $nav-li-1st-lvl-height-mobile
+
+// NAV selectors
+
+$nav-menu-selector: ".menu";
+
+// NAV basic sizes
+
+$nav-li-height: 40px;
+
+$nav-li-show-sub-menu-width: 50px;
+$nav-li-show-sub-menu-width-narrow: 30px;
+$nav-li-show-sub-menu-height: $nav-li-height;
+
+$nav-li-1st-lvl-height: 50px;
+$nav-li-1st-lvl-height-mobile: $nav-li-height;
+
+$nav-li-1st-lvl-show-sub-menu-height: $nav-li-1st-lvl-height;
+$nav-li-1st-lvl-show-sub-menu-height-mobile: $nav-li-1st-lvl-height-mobile;
+
+// NAV basic settings
+
+$nav-breakpoint: 481px;
+$nav-font-size: 18px;
+
+$nav-to-right: false;
+$nav-remove-side-padding: false;
+$nav-neg-marg-for-ib: -5px; // negative margin for inline-block to remove space
+$nav-narrow: false;
+
+// NAV sub menu indent
 
 $nav-sub-menu-max-deep: 4;
-$nav-sub-menu-start-indent: 20px;
+$nav-sub-menu-start-indent: 16px;
 $nav-sub-menu-class: ".sub-menu";
 
 @mixin sub-menu-indent($nav-sub-menu-nth-indent) {
-	$nav-sub-menu-class-nth: $nav-sub-menu-class;
+	$nav-sub-menu-class-nth: "";
+	// $nav-sub-menu-class-nth: $nav-sub-menu-class;
 	@for $i from 1 through ($nav-sub-menu-max-deep - 1) {
   		$nav-sub-menu-class-nth: $nav-sub-menu-class-nth + ' ' + $nav-sub-menu-class;
 	  	#{ $nav-sub-menu-class-nth } {
@@ -40,182 +61,206 @@ $nav-sub-menu-class: ".sub-menu";
 	}
 }
 
-$nav-font-size: 18px;
+// NAV CSS
 
-$nav-ul-1st-lvl-background: #04162D;
-
-$nav-li-1st-lvl-color: #259073;
-$nav-li-1st-lvl-height: 50px;
-$nav-li-1st-lvl-show-sub-menu-color: #259073;
-$nav-li-1st-lvl-show-sub-menu-width: $nav-li-1st-lvl-height;
-$nav-li-1st-lvl-show-sub-menu-height: $nav-li-1st-lvl-height;
-
-$nav-ul-background: #04162D;
-
-$nav-li-color: #259073;
-$nav-li-height: 40px;
-$nav-li-show-sub-menu-color: #259073;
-$nav-li-show-sub-menu-width: $nav-li-height;
-$nav-li-show-sub-menu-height: $nav-li-height;
-
-#masternav {
-	#menu-rd {
-		// -> root ul
-		@include sub-menu-indent(20px);
-		background: $nav-ul-1st-lvl-background;
-	    &,
-	    ul {
-	    	// -> all ul in menu
-	    	margin: 0;
-		    padding: 0;
-		    list-style: none;
-		    font-size: $nav-font-size;
-	    }
-	    ul {
-	    	// -> all dropdown ul
-	        display: none;
-	        background: $nav-ul-background;
-	    }
-	    li {
-	    	// -> all li
-	        position: relative;
-	        line-height: $nav-li-height;
-	        a {
-	        	// -> all a in all li
-	        	text-decoration: none;
-	            display: block;
-	            padding: 0 $nav-sub-menu-start-indent;
-	            color: $nav-li-color;
-	            &:hover {
-	            	text-decoration: underline;
-	            }
-	        }
-	        &.menu-item-has-children{
-	    	// -> all li which has submenu
-				> a {
-					// all a next to dropdown icon
-					padding: 0 $nav-li-show-sub-menu-width 0 $nav-sub-menu-start-indent;
-				}
-			}
-			.show-sub-menu {
-				// dropdown icons
-				height: $nav-li-show-sub-menu-width;
-				width: $nav-li-show-sub-menu-width;
-				position: absolute;
-				top: 0;
-				right: 0;
-				cursor: pointer;
-				text-align: center;
-				color: $nav-li-show-sub-menu-color;
-				border: 0;
-				background: none;
-				&:focus {
-					outline: $nav-li-show-sub-menu-color dotted 1px;
-				}
-			}
-	    }
-		> li {
-	    	// -> li in root menu
-			line-height: $nav-li-1st-lvl-height;
-			&.menu-item-has-children{
-	    	// -> li in root menu which has submenu
-				> a {
-					// all a next to dropdown icon
-					padding: 0 $nav-li-1st-lvl-show-sub-menu-width 0 $nav-sub-menu-start-indent;
-				}
-			}
+#{$nav-awning-selector} {
+	@include group;
+	line-height: em($nav-awning-height);
+	padding: 0 em($nav-sub-menu-start-indent);
+	#{$nav-awning-title-selector} {
+		font-size: em($nav-awning-title-font-size);
+	}
+	#{$nav-awning-button-selector} {
+		font-size: em($nav-awning-button-font-size);
+		background: none;
+		border: 0;
+		float: right;
+		height: em($nav-awning-height, $nav-awning-button-font-size);
+		padding: 0;
+	}
+}
+#{$nav-menu-selector} {
+	// -> root ul
+	@include group;
+	@include sub-menu-indent($nav-sub-menu-start-indent);
+	display: none;
+	font-size: em($nav-font-size);
+    &,
+    ul {
+    	// -> all ul in menu
+	    list-style: none;
+	    padding: 0;
+    	margin: 0;
+    }
+    ul {
+    	// -> all dropdown ul
+        //background: $nav-ul-background;
+        display: none;
+    }
+    li {
+    	// -> all li
+        line-height: em($nav-li-height, $nav-font-size);
+        position: relative;
+        a {
+        	// -> all a in all li
+            display: block;
+            padding: 0 em($nav-sub-menu-start-indent, $nav-font-size);
+        }
+        &.menu-item-has-children{
+    	// -> all li which has submenu
 			> a {
-				// -> a in li in root (1st lvl)
-				color: $nav-li-1st-lvl-color;
-				
+				// all a next to dropdown icon
+				padding-right: em($nav-li-show-sub-menu-width, $nav-font-size);
+			}
+		}
+		.show-sub-menu {
+			// dropdown icons
+			background: none;
+			border: 0;
+			height: em($nav-li-show-sub-menu-height, $nav-font-size);
+			padding: 0;
+			position: absolute;
+			right: 0;
+			text-align: center;
+			top: 0;
+			width: em($nav-li-show-sub-menu-width, $nav-font-size);
+		}
+    }
+	> li {
+    	// -> li in root menu
+		line-height: em($nav-li-1st-lvl-height-mobile, $nav-font-size);
+		&.menu-item-has-children{
+    	// -> li in root menu which has submenu
+			> a {
+				// all a next to dropdown icon
+				padding-right: em($nav-li-show-sub-menu-width, $nav-font-size);
+			}
+		}
+		> .show-sub-menu {
+			// -> dropdown icons in li in root (1st lvl)
+			height: em($nav-li-1st-lvl-show-sub-menu-height-mobile, $nav-font-size);
+			width: em($nav-li-show-sub-menu-width, $nav-font-size);
+		}
+    }
+}
+
+@media screen and (min-width: $nav-breakpoint){
+	#{$nav-awning-selector} {
+		display: none;
+	}
+	#{$nav-menu-selector} {
+		// -> root ul
+		display: block !important;
+		position: relative;
+		@if $nav-to-right {
+			text-align: right;
+		}
+		ul {
+			// -> submenus
+	        left: 0;
+	        top: em($nav-li-1st-lvl-height, $nav-font-size);
+	        z-index: 999;
+            position: absolute;
+	        ul {
+	        	// -> 2nd+ lvs submenus
+	            left: 100%;
+	            top: 0;
+	        }
+            a {
+				// -> all a in submenus
+				padding-left: em($nav-sub-menu-start-indent, $nav-font-size) !important;
+			}
+
+        }
+		li {
+			// -> all li in root
+			@if $nav-to-right {
+				text-align: left;
+			}
+			white-space:nowrap;
+			&.menu-item-has-children{
+				// -> all li in root which has submenu
+				> a {
+					// -> all a next to dropdown icon
+					@if $nav-narrow {
+						padding: 0 em($nav-li-show-sub-menu-width-narrow, $nav-font-size) 0 em($nav-sub-menu-start-indent, $nav-font-size);
+					}
+				}
 			}
 			> .show-sub-menu {
-				// -> dropdown icons in li in root (1st lvl)
-				color: $nav-li-1st-lvl-show-sub-menu-color;
-				width: $nav-li-1st-lvl-show-sub-menu-width;
-				height: $nav-li-1st-lvl-show-sub-menu-width;
+				// -> dropdown icons
+				@if $nav-narrow {
+					width: em($nav-li-show-sub-menu-width-narrow, $nav-font-size);
+				}
 			}
-	    }
+		}
+        > li {
+        	// li in root (1st lvl)
+        	display: inline-block;
+        	@if (strip-unit($nav-neg-marg-for-ib) != 0) {
+				margin-left: em($nav-neg-marg-for-ib, $nav-font-size);
+	        	&:first-child {
+					margin-left: 0;
+	        	}
+        	}
+        	line-height: em($nav-li-1st-lvl-height, $nav-font-size);
+        	> ul {
+				// -> first submenu
+				min-width: 100%;
+			}
+        	> .show-sub-menu {
+				// -> dropdown icons in li in root (1st lvl)
+				height: em($nav-li-1st-lvl-show-sub-menu-height, $nav-font-size);
+			}
+			@if $nav-remove-side-padding {
+				&:first-child {
+				// -> first li in root (1st lvl)
+					> a {
+						padding-left: 0;
+					}
+				}
+				&:last-child {
+				// -> last li in root (1st lvl)
+					> a {
+						padding-right: 0;
+					}
+					&.menu-item-has-children {
+						> .show-sub-menu {
+							text-align: right;
+						}
+						@if $nav-narrow {
+							> a {
+								padding-right: em($nav-li-show-sub-menu-width-narrow - $nav-sub-menu-start-indent/2, $nav-font-size);
+							}
+							> .show-sub-menu {
+								width: em($nav-li-show-sub-menu-width-narrow - $nav-sub-menu-start-indent/2, $nav-font-size);
+							}
+						} @else {
+							> a {
+								padding-right: em($nav-li-show-sub-menu-width - $nav-sub-menu-start-indent, $nav-font-size);
+							}
+							> .show-sub-menu {
+								width: em($nav-li-show-sub-menu-width - $nav-sub-menu-start-indent, $nav-font-size);
+							}
+						}
+					}
+				}
+			}
+        }
 	}
 }
-
 
 html.no-js {
-	#masternav {
-		#menu-rd {
-			ul {
-				// -> all dropdowns when JS disabled
-				display: block;
-			}
+	#{$nav-menu-selector} {
+		display: block;
+		.show-sub-menu {
+			display: none;
+		}
+		.menu-item-has-children > a {
+			padding-right: em($nav-sub-menu-start-indent, $nav-font-size)
 		}
 	}
-}
-
-
-html.touch {
-	#masternav a,
-	.show-sub-menu {
-		// -> all a and dropdown icons on touch screen
-		outline: none;
-	}
-}
-
-@media screen and (min-width: 481px){
-	#masternav {
-		#menu-rd {
-			// -> root ul
-			position: relative;
-			ul {
-				// submenus
-	            min-width: 100%;
-	            position: absolute;
-		        z-index: 999;
-		        top: $nav-li-1st-lvl-height;
-		        left: 0;
-		        ul {
-		        	// -> 2nd+ lvs submenus
-		            top: 0;
-		            left: 100%;
-		        }
-	            a {
-					// all a in submenus
-					padding-left: $nav-sub-menu-start-indent !important;
-				}
-				li {
-					/*
-					// all li in submenus
-					&:first-child {
-						@include border-radius(6px 6px 0 0);	
-					}
-					&:last-child {
-						@include border-radius(0 0 6px 6px);	
-					}
-					*/
-				}
-	        }
-			li {
-				// all li in root
-				white-space:nowrap;
-			}
-	        > li {
-	        	// li in root (1st lvl)	        	
-	        	float: left;		        		        
-	        }
-		}
-	}
-	
-	html.no-js {
-		#masternav {
-			#menu-rd {
-				a {
-					// -> all a when JS disabled
-					padding: 0 $nav-sub-menu-start-indent;
-				}
-				ul {
-					// -> all dropdowns when JS disabled
-					display: none;
-				}
-			}
-		}
+	#{$nav-awning-selector} {
+		display: none;
 	}
 }
