--- a/sass/font-awesome/_core.scss
+++ b/sass/font-awesome/_core.scss
@@ -1,7 +1,6 @@
 // Base Class Definition
 // -------------------------
-
-.#{$fa-css-prefix} {
+[class*="#{$fa-css-prefix}-"]:before {
   display: inline-block;
   font-family: FontAwesome;
   font-style: normal;
